# nabazon

dummy_server/: server.py
server/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/hoshi/: main.py
server/nabazon_server/: config_reader.py  main.py
server/nabazon_server/core/: location_data.py  post.py
server/nabazon_server/resources/: config.yml
server/peleg_proj/: __init__.py  app.py
server/tests/: test_hoshi.py  test_nabazon_server.py  test_peleg_proj.py
web/: package.json
web/src/: index.js
web/src/assets/img/: nabazon.jfif
web/src/components/Header/: HeaderLinks.js
web/src/views/CalendarPage/: Calendar.js  CalendarPage.js
web/src/views/Components/: Components.js  EventModal.js  Events.js  Home.js  ImageMediaCard.js  Navbar.js  NewActivity.js
web/src/views/Components/Sections/: Home.js  ImageMediaCard.js  SectionBasics.js  SectionNavbars.js
web/src/views/LoginPage/: LoginPage.js
